--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/xml-parser": "^1.2.30",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "xml-parser": "^1.2.1"
   }
 }
